remove the lable selector

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@ limitations under the License.
       <div id="node-error" class="error hide">Node error <br/> <span class="message"></span></div>
 
       <div class="navbar-logo">
-        <img src="assets/kubernetes-logo.svg" alt="Kubernetes logo">
+        <img src="assets/logo.png" alt="Kubernetes logo">
       </div>
     </div>
     <div class="nodesbar">
